New line for index.html
Added a new line to make things more interesting

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     Department "Information and intellectual property"
     faculty "Computer and information technology" State Tax University
   </div>
+  <p>New line, eh? Sure, why not...</p>
 </body>
 </html>
